clase 10/04-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-db
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-db
  template:
    metadata:
      labels:
        app: wp-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: svcbd
  namespace: wordpress
spec:
  selector:
    app: wp-db
  ports:
    - port: 3306
      targetPort: 3306
