clase 10/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: wordpress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: wptest.devel.k24.indap.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svcmp
                port:
                  number: 80
